# rust-ollama-discord-bot

./: .gitignore  Cargo.toml  Cargo.toml~  README.md  flake.nix
src/: commands.rs  commands.rs~  main.rs  main.rs~
