[package]
name = "discord-ollama"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = {version = "0.12.3"}#, features = ["model"]}
poise = "0.6.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
ollama-rs = "0.2.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
